game_server/logs/game_2022_01_03_PID_9980.log
2022-01-03 10:38:21:646 - info: main : redis-connect-database = 0 : 49.50.172.145:6379
2022-01-03 10:38:21:653 - info: connect sub redis : ["server_message"]
2022-01-03 10:38:21:653 - info: sub : redis-connect-database = 1 : 49.50.172.145:6379
2022-01-03 10:38:21:659 - info: msg : redis-connect-database = 2 : 49.50.172.145:6379
2022-01-03 10:38:21:661 - info: mysql freemeta_com com db init : 49.50.172.145:3306
2022-01-03 10:38:21:661 - info: mysql freemeta_log log db init : 49.50.172.145:3306
2022-01-03 10:38:21:661 - info: mysql freemeta_msg msg db init : 49.50.172.145:3306
2022-01-03 10:38:21:677 - info: mysql freemeta_01 shard db init : 10.36.69.58:3306
2022-01-03 10:38:21:715 - info: load achievement reference table success !!
2022-01-03 10:38:21:721 - info: load character reference table success !!
2022-01-03 10:38:21:734 - info: load collection reference table success !!
2022-01-03 10:38:21:744 - info: load daily attendance reference table success !!
2022-01-03 10:38:21:801 - info: load item reference table success !!
2022-01-03 10:38:21:810 - info: load open world reference table success !!
2022-01-03 10:38:21:817 - info: load payment reference table success !!
2022-01-03 10:38:21:828 - info: load play world reference table success !!
2022-01-03 10:38:21:835 - info: load ranking reward reference table success !!
2022-01-03 10:38:21:855 - info: load reward reference table success !!
2022-01-03 10:38:21:862 - info: load reward_fishing reference table success !!
2022-01-03 10:38:21:868 - info: load system shop reference table success !!
2022-01-03 10:38:22:122 - info: 서버가 시작되었습니다. [port:30051]
2022-01-03 10:38:22:122 - info: try to start [freemeta game test mode server] : http://127.0.0.1:30051
2022-01-03 10:38:22:122 - info: packet status : packet status not recorded yet.
2022-01-03 10:38:22:130 - error: C:\workspace\FM_DEV_NCloud\server\trunk\fm_node_server\game_server\test_logic\test_fn_achieve_collection.js:64
    seq: ,
         ^

SyntaxError: Unexpected token ','
    at Module._compile (internal/modules/cjs/loader.js:895:18)
    at Object.Module._extensions..js (internal/modules/cjs/loader.js:995:10)
    at Module.load (internal/modules/cjs/loader.js:815:32)
    at Function.Module._load (internal/modules/cjs/loader.js:727:14)
    at Module.require (internal/modules/cjs/loader.js:852:19)
    at require (internal/modules/cjs/helpers.js:74:18)
    at Object.<anonymous> (C:\workspace\FM_DEV_NCloud\server\trunk\fm_node_server\game_server\test_logic\test_senario1.js:8:31)
    at Module._compile (internal/modules/cjs/loader.js:959:30)
    at Object.Module._extensions..js (internal/modules/cjs/loader.js:995:10)
    at Module.load (internal/modules/cjs/loader.js:815:32)
